--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html>
-  <head>
-    <title>My first web page</title>
-  </head>
-  <body>
-    <p>Welcome to Marguerite Bellotti's Site</p>
 
-    <img src="https://media.licdn.com/dms/image/D4E03AQFrQDtc-dupJg/profile-displayphoto-shrink_800_800/0/1702591849918?e=2147483647&v=beta&t=7ELEM5N9uyS0nJKSeQDK4j_eodk5YVFM7L-Z1chRJpM"/>
-    
-  </body>
+<head>
+    <title> My New Web Page</title>
+    <link rel="stylesheet" href="stylesheet.css">
+</head>
+<body>
+    <p>This is some text.</p>
+
+    <img src="kitten.jpeg" alt="This is an image">
+</body>
 </html>
